--- a/cats_cnn.ipynb
+++ b/cats_cnn.ipynb
@@ -6,6 +6,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "source: https://blog.algorithmia.com/convolutional-neural-nets-in-pytorch/\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from torch.utils.data import DataLoader\n",
     "import torchvision.transforms as transforms"
    ]
