--- a/dataloader_pytorch.ipynb
+++ b/dataloader_pytorch.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -12,7 +12,9 @@
        "        \n",
        "source: https://pytorch.org/tutorials/beginner/data_loading_tutorial.html#dataset-class\n",
        "        \n",
-       "source: https://jhui.github.io/2018/02/09/PyTorch-Data-loading-preprocess_torchvision/"
+       "source: https://jhui.github.io/2018/02/09/PyTorch-Data-loading-preprocess_torchvision/\n",
+       "        \n",
+       "source data: https://www.kaggle.com/crawford/cat-dataset"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -28,13 +30,17 @@
     "        \n",
     "source: https://pytorch.org/tutorials/beginner/data_loading_tutorial.html#dataset-class\n",
     "        \n",
-    "source: https://jhui.github.io/2018/02/09/PyTorch-Data-loading-preprocess_torchvision/"
+    "source: https://jhui.github.io/2018/02/09/PyTorch-Data-loading-preprocess_torchvision/\n",
+    "        \n",
+    "source data: https://www.kaggle.com/crawford/cat-dataset"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -104,6 +110,55 @@
     "# get some random training images\n",
     "for i in iter(train_loader):\n",
     "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Image name: person-7.jpg\n",
+      "Landmarks shape: (68, 2)\n",
+      "First 4 Landmarks: [[32. 65.]\n",
+      " [33. 76.]\n",
+      " [34. 86.]\n",
+      " [34. 97.]]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/athul/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:14: FutureWarning: Method .as_matrix will be removed in a future version. Use .values instead.\n",
+      "  \n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import torch\n",
+    "import pandas as pd\n",
+    "from skimage import io, transform\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from torch.utils.data import Dataset, DataLoader\n",
+    "from torchvision import transforms, utils\n",
+    "\n",
+    "landmarks_frame = pd.read_csv('~/Downloads/faces/face_landmarks.csv')\n",
+    "\n",
+    "n = 65\n",
+    "img_name = landmarks_frame.iloc[n, 0]\n",
+    "landmarks = landmarks_frame.iloc[n, 1:].as_matrix()\n",
+    "landmarks = landmarks.astype('float').reshape(-1, 2)\n",
+    "\n",
+    "print('Image name: {}'.format(img_name))\n",
+    "print('Landmarks shape: {}'.format(landmarks.shape))\n",
+    "print('First 4 Landmarks: {}'.format(landmarks[:4]))\n",
+    "\n"
    ]
   },
   {
